[package]
name = "vhost-device-vsock"
version = "0.2.0"
authors = ["Harshavardhan Unnibhavi <harshanavkis@gmail.com>", "Stefano Garzarella <sgarzare@redhat.com>"]
description = "A virtio-vsock device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "vsock"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
default = ["backend_vsock"]
backend_vsock = ["vsock", "libc"]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
byteorder = "1"
clap = { version = "4.5",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.3.2"
log = "0.4"
thiserror = "2.0"
# vhost = { version = "0.13", features = ["vhost-user-backend"] }
vhost = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api", features = ["vhost-user-backend"] }
# vhost-user-backend = "0.17"
vhost-user-backend = { git = "https://github.com/uran0sh/vhost.git", branch = "test-change-api" }
virtio-bindings = "0.2.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main" }
virtio-vsock = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main" }
vm-memory = "0.16.1"
vmm-sys-util = "0.12"
figment = { version = "0.10.19", features = ["yaml"] }
vsock = { version = "0.5.0", optional = true }
libc = { version = "0.2.172", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", branch = "main", features = ["test-utils"] }
tempfile = "3.19.1"
