[package]
name = "vhost-device-vsock"
version = "0.3.0"
authors = ["Harshavardhan Unnibhavi <harshanavkis@gmail.com>", "Stefano Garzarella <sgarzare@redhat.com>"]
description = "A virtio-vsock device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "vsock"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
default = ["backend_vsock"]
backend_vsock = ["vsock", "libc"]
xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
byteorder = "1"
clap = { version = "4.6",  features = ["derive"] }
env_logger = "0.11"
mio = { version = "1.0.4", features = ["os-poll", "os-ext"] }
log = "0.4"
thiserror = "2.0"
vhost = { git="https://github.com/eric-14/rust_vhost_.git", branch="experimental_mac" }
vhost-user-backend = { git="https://github.com/eric-14/rust_vhost_.git", branch="experimental_mac" }
virtio-bindings = { workspace = true }
virtio-queue = { git = "https://github.com/uran0sh/vm-virtio.git", branch = "update-vm-memory" }
virtio-vsock = { git = "https://github.com/uran0sh/vm-virtio.git", branch = "update-vm-memory" }
vm-memory = { git = "https://github.com/rust-vmm/vm-memory.git", rev = "b2eaf989de2c3b9146ea7625250472501cd793fd", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vmm-sys-util = { workspace = true }
figment = { version = "0.10.19", features = ["yaml"] }
vsock = { version = "0.5.4", optional = true }
libc = { version = "0.2.186", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5"
virtio-queue = { git = "https://github.com/uran0sh/vm-virtio.git", branch = "update-vm-memory", features = ["test-utils"] }
tempfile = "3.27.0"

[lints]
workspace = true
