[package]
name = "xtask"
version = "0.1.0"
authors = ["Manos Pitsidianakis <manos.pitsidianakis@linaro.org>"]
description = "A helper binary crate following the cargo-xtask workflow recommended in <https://github.com/matklad/cargo-xtask>"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
license = "EUPL-1.2 OR GPL-3.0-or-later"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
clap_mangen = { version = "0.2.29", optional = true }
toml = { version = "0.9.7", optional = true }
markdown = { version = "=1.0.0", optional = true }

[build-dependencies]

[features]
default = ["vhost-device-sound", "vhost-device-scmi"]
vhost-device-scmi = []
vhost-device-sound = ["vhost-device-sound-alsa", "vhost-device-sound-pipewire"]
vhost-device-sound-alsa = ["mangen"]
vhost-device-sound-pipewire = ["mangen"]
mangen = ["dep:clap_mangen", "dep:clap", "dep:toml", "dep:markdown"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("alsa-backend", "pw-backend"))'] }
