[package]
name = "vhost-device-gpio"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
description = "vhost gpio backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["gpio", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0",  features = ["derive"] }
env_logger = "0.9"
libc = "0.2"
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.5", features = ["vhost-user-slave"] }
vhost-user-backend = "0.7"
virtio-bindings = "0.1"
virtio-queue = "0.6"
vm-memory = "0.10"
vmm-sys-util = "0.10"

[target.'cfg(target_env = "gnu")'.dependencies]
libgpiod = { git = "https://github.com/vireshk/libgpiod" }

[dev-dependencies]
virtio-queue = { version = "0.6", features = ["test-utils"] }
vm-memory = { version = "0.10", features = ["backend-mmap", "backend-atomic"] }
