[package]
name = "vhost-device-scsi"
version = "0.1.0"
authors = ["Gaelan Steele <gbs@canishe.com>", "Erik Schilling <erik.schilling@linaro.org>"]
description = "vhost scsi backend device"
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["scsi", "vhost", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3",  features = ["derive"] }
env_logger = "0.10"
epoll = "4.3"
log = "0.4"
num_enum = "0.5"
thiserror = "1.0"
vhost = { version = "0.7", features = ["vhost-user-slave"] }
vhost-user-backend = "0.9"
# until the scsi bindings hit a release, we have to use the commit that adds them as rev.
virtio-bindings = { git = "https://github.com/rust-vmm/vm-virtio", rev = "467c8ec99375a5f4e08b85b18257cd7e0bac1dc0" }
virtio-queue = "0.8"
vm-memory = "0.11"
vmm-sys-util = "0.11"

[dev-dependencies]
tempfile = "3.2.0"

