[package]
name = "vhost-user-sound"
version = "0.1.0"
authors = ["Stefano Garzarella <sgarzare@redhat.com>"]
description = "A virtio-sound device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "sound", "virtio-sound"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[features]
default = ["null-backend"]
null-backend = []

[dependencies]
clap = { version = "4.1",  features = ["derive"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.6", features = ["vhost-user-slave"] }
vhost-user-backend = "0.8"
virtio-bindings = "0.2"
vm-memory = "0.10"
vmm-sys-util = "0.11"

[dev-dependencies]
serial_test = "1.0"
