[package]
name = "vhost-user-vsock"
version = "0.1.0"
authors = ["Harshavardhan Unnibhavi <harshanavkis@gmail.com>"]
description = "A virtio-vsock device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
readme = "README.md"
keywords = ["vhost", "vsock"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
byteorder = "1"
clap = { version = "4.0",  features = ["derive"] }
env_logger = "0.9"
epoll = "4.3.1"
futures = { version = "0.3", features = ["thread-pool"] }
log = "0.4"
thiserror = "1.0"
vhost = { version = "0.5", features = ["vhost-user-slave"] }
vhost-user-backend = "0.7"
virtio-bindings = "0.1"
virtio-queue = "0.6"
virtio-vsock = "0.1"
vm-memory = "0.10"
vmm-sys-util = "0.10"

[dev-dependencies]
virtio-queue = { version = "0.6", features = ["test-utils"] }
serial_test = "0.9"
